--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,48 @@
+body{
+  background-color: lightgray;
+  display: flex;
+  justify-content: center;
+}
+
+
 .box{
-  width: 200px;
-  height:200px;
+  width: 150px;
+  height: 150px;
   border: 1px solid black;
+  display: flex;
+  justify-content: center;
+  align-items:  center;
+  background-color: lightcoral;
 }
 
 .row{
   display:flex;
+}
+
+img{
+  max-width:70%;
+  max-height:70%;
+  size:cover;
+  z-index:1;
+}
+
+#winner-image{
+  width:50px;
+  height:50px;
+  z-index:1;
+}
+
+#player-text{
+  display:flex;
+  align-items:center;
+  justify-content: space-evenly;
+  max-width:150px;
+  padding:3px;
+  margin-top:3px;
+  margin-bottom:3px;
+}
+
+#winner-text{
+  color:red;
+  text-transform: uppercase;
 }
