--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,12 @@ body{
   justify-content: center;
 }
 
+#facebook-screen{
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  height:100vh;
+}
 
 .box{
   width: 150px;
@@ -48,5 +54,10 @@ img{
 }
 
 #history{
-  margin-left:10px;
+  margin-left:30px;
+  margin-right:30px;
+}
+
+#data{
+  margin-left:30px;
 }
